--- a/Services/Catalog/M.Shop.Catalog/M.Shop.Catalog.csproj
+++ b/Services/Catalog/M.Shop.Catalog/M.Shop.Catalog.csproj
@@ -16,7 +16,9 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
-    <Folder Include="Services\" />
+    <Folder Include="Services\ProductDetailServices\" />
+    <Folder Include="Services\ProductImageServices\" />
+    <Folder Include="Services\ProductServices\" />
   </ItemGroup>
 
 </Project>
