--- a/Services/Catalog/M.Shop.Catalog/appsettings.json
+++ b/Services/Catalog/M.Shop.Catalog/appsettings.json
@@ -4,7 +4,7 @@
     "ProductCollectionName": "Products",
     "ProductDetailCollectionName": "ProductDetails",
     "ProductImageCollectionName": "ProductImages",
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://localhost:27017/",
     "DatabaseName": "MultiShopCatalogDb"
   },
   "Logging": {
