--- a/Services/Order/Core/Application/Application.csproj
+++ b/Services/Order/Core/Application/Application.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\CQRS\Handlers\AddressHandlers\" />
+    <Folder Include="Features\Mediator\" />
+  </ItemGroup>
+
 </Project>
