--- a/Services/Discount/M.Shop.Discount/appsettings.json
+++ b/Services/Discount/M.Shop.Discount/appsettings.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "Server=EMRE\\SQLEXPRESS01; initial Catalog=MShopDiscountDb;integrated Security=true"
 
   },
-
+  "IdentityServerUrl": "http://localhost:5001",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
