--- a/Services/Discount/M.Shop.Discount/Properties/launchSettings.json
+++ b/Services/Discount/M.Shop.Discount/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "M.Shop.Discount": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7155;http://localhost:5258",
+      "applicationUrl": "https://localhost:7071",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
