--- a/Services/Order/Presentation/Order.WebApi/Properties/launchSettings.json
+++ b/Services/Order/Presentation/Order.WebApi/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7107;http://localhost:5054",
+      "applicationUrl": "https://localhost:7072",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
