--- a/Services/Cargo/Cargo.DataAccessLayer/Cargo.DataAccessLayer.csproj
+++ b/Services/Cargo/Cargo.DataAccessLayer/Cargo.DataAccessLayer.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\Cargo.EntityLayer\Cargo.EntityLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="EntityFramework\" />
+  </ItemGroup>
+
 </Project>
