--- a/Services/Cargo/Cargo.BusinessLayer/Cargo.BusinessLayer.csproj
+++ b/Services/Cargo/Cargo.BusinessLayer/Cargo.BusinessLayer.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Cargo.DataAccessLayer\Cargo.DataAccessLayer.csproj" />
+  </ItemGroup>
+
 </Project>
