--- a/Services/Cargo/Cargo.WebApi/Properties/launchSettings.json
+++ b/Services/Cargo/Cargo.WebApi/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7107;http://localhost:5252",
+      "applicationUrl": "https://localhost:7073;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
