--- a/Services/Cargo/Cargo.WebApi/Properties/launchSettings.json
+++ b/Services/Cargo/Cargo.WebApi/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "Cargo.WebApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7073;",
       "environmentVariables": {
