--- a/Services/Catalog/M.Shop.Catalog/appsettings.json
+++ b/Services/Catalog/M.Shop.Catalog/appsettings.json
@@ -7,6 +7,7 @@
     "FeatureSliderCollectionName": "FeatureSliders",
     "SpecialOfferCollectionName": "SpecialOffers",
     "FeatureCollectionName": "Features",
+    "FeatureProductCollectionName": "FeatureProducts",
     "ConnectionString": "mongodb://localhost:27017/",
     "DatabaseName": "MultiShopCatalogDb"
   },
