--- a/Services/Catalog/M.Shop.Catalog/appsettings.json
+++ b/Services/Catalog/M.Shop.Catalog/appsettings.json
@@ -8,6 +8,7 @@
     "SpecialOfferCollectionName": "SpecialOffers",
     "FeatureCollectionName": "Features",
     "FeatureProductCollectionName": "FeatureProducts",
+    "OfferDiscountCollectionName": "OfferDiscounts",
     "ConnectionString": "mongodb://localhost:27017/",
     "DatabaseName": "MultiShopCatalogDb"
   },
