--- a/Services/Catalog/M.Shop.Catalog/appsettings.json
+++ b/Services/Catalog/M.Shop.Catalog/appsettings.json
@@ -9,6 +9,7 @@
     "FeatureCollectionName": "Features",
     "FeatureProductCollectionName": "FeatureProducts",
     "OfferDiscountCollectionName": "OfferDiscounts",
+    "BrandCollectionName": "Brands",
     "ConnectionString": "mongodb://localhost:27017/",
     "DatabaseName": "MultiShopCatalogDb"
   },
