--- a/Services/Catalog/M.Shop.Catalog/appsettings.json
+++ b/Services/Catalog/M.Shop.Catalog/appsettings.json
@@ -6,6 +6,7 @@
     "ProductImageCollectionName": "ProductImages",
     "FeatureSliderCollectionName": "FeatureSliders",
     "SpecialOfferCollectionName": "SpecialOffers",
+    "ContactCollectionName": "Contacts",
     "FeatureCollectionName": "Features",
     "FeatureProductCollectionName": "FeatureProducts",
     "OfferDiscountCollectionName": "OfferDiscounts",
