--- a/Services/Comment/Comment.Api/Properties/launchSettings.json
+++ b/Services/Comment/Comment.Api/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "Comment.Api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7075;",
       "environmentVariables": {
