--- a/ApiGateway/OcelotGateway/Properties/launchSettings.json
+++ b/ApiGateway/OcelotGateway/Properties/launchSettings.json
@@ -11,8 +11,8 @@
     "OcelotGateway": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "https://localhost:7239;http://localhost:5113",
+      "launchBrowser": false,
+      "applicationUrl": "http://localhost:5000;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
