--- a/Images/MsImages/Properties/launchSettings.json
+++ b/Images/MsImages/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "MsImages": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7062;http://localhost:5136",
+      "applicationUrl": "https://localhost:7077;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
