--- a/Payment/MsPayment/Properties/launchSettings.json
+++ b/Payment/MsPayment/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "MsPayment": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7113;http://localhost:5142",
+      "applicationUrl": "http://localhost:7076;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
