--- a/Frontends/MShop.WebUI/appsettings.json
+++ b/Frontends/MShop.WebUI/appsettings.json
@@ -1,5 +1,34 @@
 {
-  "ClientSettings":{
+  "ServiceApiSettings": {
+    "OcelotServerUrl": "http://localhost:5000",
+    "IdentityServerUrl": "http://localhost:5001",
+    "Catalog": {
+      "Path": "services/catalog/"
+    },
+    "Image": {
+      "Path": "services/images"
+    },
+    "Discount": {
+      "Path": "services/discount"
+    },
+    "Order": {
+      "Path": "services/order"
+    },
+    "Cargo": {
+      "Path": "services/cargo"
+    },
+    "Basket": {
+      "Path": "services/basket"
+    },
+    "Payment": {
+      "Path": "services/payment"
+    },
+    "Comment": {
+      "Path": "services/comment"
+    }
+  },
+
+  "ClientSettings": {
     "MultiShopVisitorClient": {
       "ClientId": "MultiShopVisitorId",
       "ClientSecret": "multishopsecret"
