--- a/Frontends/MShop.WebUI/appsettings.json
+++ b/Frontends/MShop.WebUI/appsettings.json
@@ -6,25 +6,25 @@
       "Path": "services/catalog/"
     },
     "Image": {
-      "Path": "services/images"
+      "Path": "services/images/"
     },
     "Discount": {
-      "Path": "services/discount"
+      "Path": "services/discount/"
     },
     "Order": {
-      "Path": "services/order"
+      "Path": "services/order/"
     },
     "Cargo": {
-      "Path": "services/cargo"
+      "Path": "services/cargo/"
     },
     "Basket": {
-      "Path": "services/basket"
+      "Path": "services/basket/"
     },
     "Payment": {
-      "Path": "services/payment"
+      "Path": "services/payment/"
     },
     "Comment": {
-      "Path": "services/comment"
+      "Path": "services/comment/"
     }
   },
 
