--- a/Services/Basket/Basket.WebApi/Properties/launchSettings.json
+++ b/Services/Basket/Basket.WebApi/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "Basket.WebApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:7074;",
       "environmentVariables": {
