--- a/Services/Message/MShop.Message/Properties/launchSettings.json
+++ b/Services/Message/MShop.Message/Properties/launchSettings.json
@@ -14,7 +14,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7085;http://localhost:5252",
+      "applicationUrl": "http://localhost:7078;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
