--- a/Services/Message/MShop.Message/appsettings.json
+++ b/Services/Message/MShop.Message/appsettings.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "Server=localhost;Port=5432;Database=MShopMessage;User Id=postgres; Password=123456;"
 
   },
-
+  "IdentityServerUrl": "http://localhost:5001",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
