--- a/Frontends/MShop.WebUI/Properties/launchSettings.json
+++ b/Frontends/MShop.WebUI/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7285;http://localhost:5157",
+      "applicationUrl": "https://localhost:7285;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
