--- a/Frontends/MShop.WebUI/appsettings.json
+++ b/Frontends/MShop.WebUI/appsettings.json
@@ -25,6 +25,9 @@
     },
     "Comment": {
       "Path": "services/comment/"
+    },
+    "Message": {
+      "Path": "services/message/"
     }
   },
 
