--- a/Services/Catalog/M.Shop.Catalog/Properties/launchSettings.json
+++ b/Services/Catalog/M.Shop.Catalog/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "M.Shop.Catalog": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:7070",
       "environmentVariables": {
